# lyricli

./: README.md  requirements.txt  setup.cfg  setup.py
lyricapi/: README.md  app.py
lyricli/: __main__.py  console.py  exceptions.py  melon.py  output.py  parser.py
lyricli/lyricli/: lyrics.py
lyricli/lyricli_pkg_KKodiac.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
