[metadata]
name = lyricli-pkg-KKodiac
version = 0.0.1
author = KKodiac
author_email = seanhong2000@gmail.com
description = Cli tool made with python for viewing lyrics
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/KKodiac/lyricli
project_urls =
    Bug Tracker = https://github.com/KKodiac/lyricli/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = lyricli
packages = find:
python_requires = >=3.6

[options.packages.find]
where = lyricli
